--- a/website/smartconcept/src/components/block/style.css
+++ b/website/smartconcept/src/components/block/style.css
@@ -4,7 +4,7 @@
     box-shadow: grey;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     padding: 5px;
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -12,7 +12,16 @@
     margin-bottom: 2px;
 }
 
-.block-container p {
+.block-container p{
     text-align: center;
     text-justify: inter-word;
+    align-items: center;
+    width: 100%;    
 }
+.block-container h2{
+    text-align: center;
+    text-justify: inter-word;
+    align-items: center;
+    width: 100%;    
+}
+
