--- a/website/smartconcept/src/components/block/style.css
+++ b/website/smartconcept/src/components/block/style.css
@@ -1,5 +1,5 @@
 .block-container {
-    border: 1.5px solid black;
+    background-color: aliceblue;
     border-radius: 25px;
     box-shadow: grey;
     display: flex;
@@ -7,7 +7,7 @@
     align-items: flex-start;
     padding: 5px;
     width: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Roboto",sans-serif;
     font-size: 20px;
     margin-bottom: 2px;
 }
