--- a/website/smartconcept/src/components/contact-us/style.css
+++ b/website/smartconcept/src/components/contact-us/style.css
@@ -8,6 +8,8 @@
     width: 100%;
     display: flex;    
     flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
 }
 
 .contact-address {
