--- a/website/smartconcept/src/components/navigationBar/style.css
+++ b/website/smartconcept/src/components/navigationBar/style.css
@@ -1,6 +1,20 @@
 .nav-container  {
     display: flex;
     flex-direction: row;
+    background-color: #03A9F4;
+    width: 100%;
+}
+
+.nav-content-left {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    justify-content: flex-start;
+}
+
+.nav-content-right {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
     justify-content: flex-end;
-    background-color: #03A9F4
 }
