--- a/website/smartconcept/src/components/home/style.css
+++ b/website/smartconcept/src/components/home/style.css
@@ -2,4 +2,35 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+}
+
+.home-container1 {
+    background: rgba(15, 147, 254, 1);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;        
+}
+
+.home-container1 div{
+    position: absolute;
+    color: #FFFFFF;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.home-container1 h4 {
+    font-size: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    word-wrap: break-word;
+    font-weight: bolder;
 }
