--- a/website/smartconcept/src/responsiveComponent/app/style.css
+++ b/website/smartconcept/src/responsiveComponent/app/style.css
@@ -13,7 +13,9 @@ a, abbr, acronym, address, applet, b, big, blockquote, body, button, caption, ce
     vertical-align: baseline;
     background: 0 0;
 }
-
+h1 {
+    text-align: center;
+}
 .container {
     padding: 0;
     overflow-x: hidden;
@@ -28,7 +30,8 @@ a, abbr, acronym, address, applet, b, big, blockquote, body, button, caption, ce
 
 .row {
     margin: 0;
-    background-color: white;
+    background-color: transparent;
+    width: 100%;
 }
 
 a:link {
@@ -52,4 +55,9 @@ a:hover {
 a:active {
     color: #DEFF4F;
     transition: color 0.4s ease 0s;
+}
+
+.jumbotron {
+    background: transparent;
+    width: 100%;
 }
