--- a/website/smartconcept/src/responsiveComponent/header/style.css
+++ b/website/smartconcept/src/responsiveComponent/header/style.css
@@ -6,7 +6,11 @@
     padding: 15px;
     margin: 0;
 }
-
+.navbar-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .headerTel span {
     color: rgba(15, 147, 254, 1);
 }
@@ -29,6 +33,11 @@
     width: 42px; 
     height: 48px; 
     object-fit: fill;
+}
+
+.navbar {
+    margin: 0;
+    border: 0;
 }
 /* 
 .headerText span {
