--- a/website/smartconcept/src/responsiveComponent/app/style.css
+++ b/website/smartconcept/src/responsiveComponent/app/style.css
@@ -17,7 +17,7 @@ h1 {
     text-align: center;
 }
 .container {
-    padding: 0;
+    /* padding: 0; */
     overflow-x: hidden;
     margin: 0;
     width: 100%;
