Change call now section

--- a/website/smartconcept/src/responsiveComponent/home/style.css
+++ b/website/smartconcept/src/responsiveComponent/home/style.css
@@ -23,6 +23,11 @@
 .home-container1-text h1 {
     margin-bottom: 10px;
 }
+.home-container2 h4{
+    font-style: italic;
+    font-weight: bolder;
+    margin-bottom: 5px;
+}
 @media all and (max-width: 900px) {
     .home-container1-text{
         width: 90%;
