--- a/website/smartconcept/src/screens/appointment/style.css
+++ b/website/smartconcept/src/screens/appointment/style.css
@@ -1,10 +1,75 @@
 .appointment-container {
     margin: 0;
     padding: 0;
+    background-color: #DEFF4F;
     border: 0;
 }
-
+.appointment-container-row {
+    top: 20%;
+    padding: 20px 10px;
+}
 .appointment-container div {
-    padding: 20px 0;
-    background-color: #DEFF4F;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;  
+}
+.appointment-container form {
+    width: 100%;
+}
+.appointment-container-btn button,
+.appointment-container-btn button:focus,
+.appointment-container-btn button:active,
+.appointment-container-btn button:hover,
+.appointment-container a,
+.appointment-container a:focus{
+    display: block;
+    text-decoration: none;
+    background-color: rgba(15, 147, 254, 1);
+    color: #DEFF4F;
+    width: 100%; 
+    height: 100%;
+    border-radius: 20px;
+    outline: transparent;
+    transition: color 0.1s Sine 0s;
+}
+
+.appointment-container a {
+    margin: 10px 0;
+}
+
+.appointment-input input, select{
+    border-bottom: 1px solid rgba(15, 147, 254, 1);
+    color: rgba(15, 147, 254, 1);
+    outline: none;
+    border-radius: 4px;
+}
+span.appointment-input {
+    width: 100%;    
+}
+.input-group-addon {
+    background: transparent;
+    border-bottom: 1px solid rgba(15, 147, 254, 1);    
+}
+.appointment-input input:focus {
+    outline:none;
+}
+.input-box {
+    border-bottom: 1px solid rgba(15, 147, 254, 1);
+    color: rgba(15, 147, 254, 1);
+    outline: none;
+    border-radius: 4px;
+    width: 100%;
+}
+.appointment-container-btn button{
+    background-color: rgba(15, 147, 254, 1);
+    color: #DEFF4F;
+}
+.appointment-container-btn button:disabled{
+    background-color: transparent;
+    color: rgba(15, 147, 254, 1);
+}
+
+.appointment-form-group {
+    width: 100%;
 }
